
2011-08-18
- bios/dmasound.c, bios/machine.h: Improved Microwire detection. (VRI)
- bios/machine.c, bios/cookie.h: Added Falcon DMA sound to _SND cookie. (VRI)
- bdos/fs.h, bdos/fsfat.c, bdos/fsio.c: Big partition support part 2.
  Change the types of variables used in cluster handling. Contributed by Roger
  Burrows. (VRI)
- vdi/vdi_raster.c: Fixed the C implementation of bit_blt() when the destination
  width is spanning a single word (usually width <= 16 pixels). This was visible
  when moving a window slightly on the right over an icon. (VRI)

2011-08-19
- desk/deskmain.c: Fixed wrong reloading of large windows. (VRI)
- desk/deskmain.c: Reposition the windows saved outside the screen into the
  current desktop area. (VRI)
- aes/gemmnlib.c: Added support for accessory menu separator line customized
  using a USERDEF (ex: CF-Lib, QED).

2011-08-20
- Makefile, bios/ide.c, bios/ide.h, bios/xhdi.c, include/config.h: Added very
  minimalistic IDE support. Currently enabled only on the FireBee. (VRI)

2011-08-21
- bios/blkdev.c, bios/blkdev.h: Better FAT12/FAT16 detection. (VRI)

2011-08-22
- bios/initinfo.c: Save CPU time during the welcome screen. (VRI)
- po/ru.po: Added missing translations. Contributed by Dima Sobolev. (VRI)
- desk/desk_rsc.c, desk/desk_rsc.h, desk/deskmain.c, po/fr.po: Enabled the
  Change Resolution menu item on ST resolutions. (VRI)
- desk/deskmain.c: Disable Erase on drives and trash (was crashing). (VRI)

2011-08-23
- po/ru.po: Added missing translations. Contributed by Dima Sobolev. (VRI)

2011-08-24
- vdi/vdi_col.c: Fixed the default VDI palette. (VRI)

2011-08-26
- aes/geminit.c, aes/gempd.c, aes/gempd.h, aes/gemshlib.c, aes/struct.h:
  Improved rsrc_load() and shel_find() to search also in the application
  directory and the root directory. This fxes the Nethack game. (VRI)

2011-08-30
- bdos/bios.h, bios/blkdev.h, cli/command.c, include/bpb.h: Centralize
  definition of BPB. Contributed by Roger Burrows. (VRI)